# VelyraImage

./: CMakeLists.txt  README.md  main.cpp
Resources/: Red-100x100-F32-RGB.hdr
include/VelyraImage/: IImage.hpp  ImageDefs.hpp  ImageFactory.hpp  VelyraImage.hpp
src/: IImage.cpp  ImageDefs.cpp  ImageF32.cpp  ImageF32.hpp  ImageFactory.cpp  ImageU8.cpp  ImageU8.hpp  ImageUI8.cpp  ImageUI8.hpp  ImageUtils.cpp  ImageUtils.hpp  LoggerNames.hpp  Pch.hpp
src/DataTypeConversion/: DataTypeConversion.cpp  DataTypeConversion.hpp
src/FormatConversion/: FormatConversion.cpp  FormatConversion.hpp
src/stb_image/: stb_image_resize2.h
test/: TestImageDefs.cpp  TestImageF32.cpp  TestImageFactory.cpp  TestImageUI8.cpp  TypeUtils.hpp
test/DataTypeConversion/: TestDataTypeConversion.cpp
test/FormatConversion/: ImageConfig.hpp  TestFormatConversion.cpp
